@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+11-Apr-2011 Mark Dexter
+ # [#25602] Sort in Article Category List broken
+
 10-Apr-2011 Jean-Marie Simonet
  $ Adding lib_joomla.ini into site language folder and localise.php in admin language folder to prevent confusion for TTs.
  $ Changing en-GB.xmls version for 1.6.2
